ensure header uses full height on small displays

--- a/css/boss.css
+++ b/css/boss.css
@@ -91,4 +91,8 @@
   .profile .bb-cover-photo {
     display: none;
   }
+
+  .profile #buddypress #item-header-cover {
+    position: unset;
+  }
 }
